--- a/src/app/components/password/password.component.html
+++ b/src/app/components/password/password.component.html
@@ -1,6 +1,13 @@
 <div class="container">
   <div class="wrapper border-gradient border-gradient-purple">
-    <input class="password-input" type="password" placeholder="Enter password">
-    <app-password-strength></app-password-strength>
+    <input
+      class="password-input"
+      [formControl]="password"
+      type="password"
+      placeholder="Enter password"
+    />
+    <app-password-strength [password]="password.value"
+                           [isLengthError]="!!password.getError('minlength')"
+                           style="width: 100%; margin-top: 10px;"></app-password-strength>
   </div>
 </div>
