--- a/src/app/components/password/password.component.scss
+++ b/src/app/components/password/password.component.scss
@@ -1,4 +1,4 @@
-.container{
+.container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,29 +8,22 @@
   flex-direction: column;
 }
 
-.wrapper{
+.wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   background-color: black;
-  padding: 10px;
+  padding: 35px 25px;
+  background-image: linear-gradient(-45deg, #8031bd, #8E8E8E, #6ca0d0, #8031bd);
+  background-size: 300%;
 }
 
-.border-gradient {
-  border: 5px solid;
-  border-image-slice: 1;
-}
-
-.border-gradient-purple {
-  border-image-source: linear-gradient(90deg, #ffac3a 0%, #ff94bb 100%);
-}
-
-.password-input{
-  border-radius: 8px;
+.password-input {
+  text-align: center;
   border: 0;
 }
 
-.password-input:focus{
+.password-input:focus {
   outline: none;
 }
